--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R: c(person("A. COMTE", "Developer", role = c("aut", "cre"),
 Author: Aurore COMTE [aut, cre], Emmanuel Wicker [ctb]
 Maintainer: Aurore COMTE <aurore.comte@ird.fr>
 Description: Web application made whith shiny ...
-Depends: R (>= 3.4.0), shiny,shinythemes,shinyBS,stringr,shinydashboard,shinyjs,shinyWidgets,DT,shinyhelper,adegenet,poppr,plyr,FactoMiner,PopGenReport,hierfstat,pegas,colourpicker,shinyFeedback,shinyFiles,shinycssloaders,shinycustomloader,ComplexHeatmap,circlize,ggplot2,dplyr,magrittr,purrr,skimr
+Depends: R (>= 3.4.0), shiny,shinythemes,shinyBS,stringr,shinydashboard,shinyjs,shinyWidgets,DT,shinyhelper,adegenet,poppr,plyr,FactoMineR,PopGenReport,hierfstat,pegas,colourpicker,shinyFeedback,shinyFiles,shinycssloaders,shinycustomloader,ComplexHeatmap,circlize,ggplot2,dplyr,magrittr,purrr,skimr
 License: LGPL-3 | file LICENSE
 Encoding: UTF-8
 RoxygenNote: 6.1.1
