--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,6 @@
 # Remove the previous line if you edit this file
 
 # Export all names
-exportPattern("run.")
+exportPattern("run")
 
 # Import all packages listed as Imports or Depends
